Fix form actions styling
Using the `.actions` class for the form buttons container was
overlapping in some places with out use of the `.actions` class on table
contents.

Resolved quickly by using `.form-actions` for the form buttons.

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -77,7 +77,7 @@ select {
   width: auto;
 }
 
-.actions {
+.form-actions {
   form {
     display: inline-block;
   }
